--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,7 @@ jobs:
           nuitka-version: main
           script-name: viewer.py
           onefile: true
+          enable-plugins: pyside6
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
